--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -4,7 +4,7 @@
   width: 100%;
   height: 70px;
   background: #24293a;
-  border-bottom: 1px solid #e2e8f0;
+  /* border-bottom: 1px solid #e2e8f0; */
   position: fixed;
   top: 0;
   left: 0;
